# VICTRE_PIPELINE

./: README.md  SECURITY.md  advanced.html  genindex.html  index.html  install.sh  objects.inv  pipeline.html  py-modindex.html  requirements.txt  search.html  searchindex.js  started.html  victreclass.html
.github/workflow/: documentation.yml
.github/workflows/: documentation.yml  test.yml
Victre/: Constants.py  Exceptions.py  Pipeline.py  __init__.py
Victre/ModelObserver/: CHO.py  Channels.py  ModelObserver.py  NPW.py  NPWE.py  PWMF.py  __init__.py
Victre/breastMass/: CMakeLists.txt  DISCLAIMER  Makefile  README_bm.md  breastMass.cxx  breastMass.hxx
Victre/breastMass/configs/: spiculated.tpl
Victre/breastMass/doc/: Makefile  conf.py  config.rst  files.rst  index.rst  installation.rst  operation.rst  running.rst
Victre/compression/: CMakeLists.txt  README.md  breastCompress.cxx  breastCompress.hxx  predicates.cxx  tetgen.cxx  tetgen.h  tissueStruct.hxx
Victre/compression/doc/: Makefile  conf.py  files.rst  index.rst  installation.rst  notes.rst  operation.rst  running.rst
Victre/generation/: CMakeLists.txt  Makefile  artery.cxx  artery.hxx  breastPhantom.cxx  breastPhantom.hxx  createArtery.cxx  createArtery.hxx  createDuct.cxx  createDuct.hxx  createVein.cxx  createVein.hxx  duct.cxx  duct.hxx  perlinNoise.cxx  perlinNoise.hxx  perlinVectors.hxx  tissueStruct.hxx  vein.cxx  vein.hxx
Victre/generation/configs/: template_generation.tpl
Victre/projection/: MC-GPU_v1.5b.cu  make_MC-GPU_v1.5b.sh
Victre/projection/configs/: template_mcgpu.tpl
Victre/reconstruction/: FBP_DBTrecon.c  FBP_DBTrecon.h  Makefile  extract_projections.c
Victre/reconstruction/configs/: parameters.tpl
Victre/reconstruction/lib/: libfftw3.so.3  libfftw3_threads.so.3  libfftw3f.so.3  libfftw3f_omp.so.3  libfftw3f_threads.so.3  libfftw3l_omp.so.3  libfftw3l_threads.so.3
_sources/: index.rst.txt  victreclass.rst.txt
doc/: advanced.rst  conf.py  index.rst  pipeline.md  pipeline.rst  requirements.txt  started.md  started.rst  victreclass.rst
examples/: example1.py  example2.py  example3.py  example4.py  example5.py  exampleMO.py
examples/msynth/: README.md  msynth_VICTRE.py  msynth_project.sh
lesions/clustercalc/: clustercalc_model.h5
lesions/spiculated/: mass_11_size1.00.h5
phantoms/: p_1.loc  p_1.mhd  pc_1.mhd  pc_1_crop.mhd  pcl_1.loc  pcl_1.mhd
test/: test_MO.py  test_VICTRE.py  tests_MO.py
